<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_item_load_more_height">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loadingIndicator"
            android:layout_width="@dimen/ui_list_loading_size"
            android:layout_height="@dimen/ui_list_loading_size"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:indicatorColor="@color/ui_progress_indicator"
            app:indicatorSize="@dimen/ui_list_loading_size"
            app:trackColor="@color/ui_progress_track"
            app:trackThickness="3dp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_item_load_more_height"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvRetry"
            style="@style/ui_Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ui_loading_failed_retry"
            android:textSize="11sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/complete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_item_load_more_height"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvLoadMore"
            style="@style/ui_Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ui_load_more"
            android:textSize="11sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/end"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_item_load_more_height"
        android:visibility="gone">

        <TextView
            style="@style/ui_Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ui_load_end"
            android:textSize="11sp" />
    </FrameLayout>

</FrameLayout>