<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ui_bg_dialog_permission_hint"
        >
        <ImageView
            android:id="@+id/ivPic"
            android:layout_width="101.33dp"
            android:layout_height="75.33dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ui_pic_file"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/tvTitle"
            style="@style/ui_Title"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPic"
            android:layout_marginTop="21dp"
            android:layout_marginHorizontal="25.33dp"
            android:textSize="16sp"
            tools:text="Permission is required to access all files"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/tvContent"
            style="@style/ui_Text"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:layout_marginTop="14dp"
            android:layout_marginHorizontal="30dp"
            android:gravity="center_horizontal"
            tools:text="File Recovery-All file management requires jumping to settings to enable file management permissions"
            />
        <Button
            android:id="@+id/btnConfirm"
            style="@style/ui_Button.Ok"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContent"
            android:layout_marginTop="33.33dp"
            android:layout_marginHorizontal="28dp"
            android:text="@string/ui_allow"
            android:textSize="16.67sp"
            />
        <TextView
            android:id="@+id/tvCancel"
            style="@style/ui_Button.Cancel"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/btnConfirm"
            app:layout_constraintEnd_toEndOf="@+id/btnConfirm"
            app:layout_constraintTop_toBottomOf="@+id/btnConfirm"
            android:text="@string/ui_not_now"
            android:textSize="12.67sp"
            android:textColor="#999999"
            android:paddingVertical="10dp"
            />
        <TextView
            android:id="@+id/tvHint"
            style="@style/ui_Text"
            android:layout_width="match_parent"
            android:textSize="11.33sp"
            android:textColor="#999999"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCancel"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/ui_permission_hint"
            android:gravity="center_horizontal"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHint"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>